filtering, sorting, dummy service

--- a/public/styles/contacts-app.css
+++ b/public/styles/contacts-app.css
@@ -36,3 +36,11 @@ address{
   height: 100%;
   width: auto;
 }
+
+.contacts-table th {
+  cursor: pointer;
+}
+
+.contacts-table th i.glyphicon {
+  color: #aaaaaa;
+}
