alignment with session 3

--- a/public/app/layout/layout.html
+++ b/public/app/layout/layout.html
@@ -1,9 +1,10 @@
 <div class="navbar navbar-default navbar-static-top">
   <div class="container">
-    <a ui-sref="home" class="navbar-brand logo"><img src="../images/artin.png"></a>
+    <a ui-sref="home" class="navbar-brand logo"><img src="/images/artin.png"></a>
+    <a ui-sref="home" class="navbar-brand">{{ appName }}</a>
 
     <ul class="nav navbar-nav">
-      <li ui-sref-active="active"><a ui-sref="home">Contacts</a></li>
+      <li class="active"><a  ui-sref="home">Contacts</a></li>
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
