--- a/public/app/layout/layout.html
+++ b/public/app/layout/layout.html
@@ -9,9 +9,9 @@
 
     <ul class="nav navbar-nav navbar-right">
       <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown">John Doe <span class="caret"></span></a>
+        <a class="dropdown-toggle" data-toggle="dropdown">{{ user.name }} <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a ui-sref="login">Sign out</a></li>
+          <li><a ng-click=" signOut() ">Sign out</a></li>
         </ul>
       </li>
     </ul>
